<resources>
    <string name="app_name" translatable="false">MovieHound</string>
    <string name="sw_4_title" translatable="false">Звездные Войны Эпизод IV: Новая Надежда</string>
    <string name="sw_4_desc" translatable="false">Для далекой-далекой Галактики настали трудные времена. Миром правит тираническая Империя. Чистых сердцем, наделенных Силой джедаев, которые борются со злом и несправедливостью, почти не осталось. И все же есть те, кто осмеливается противостоять вселенской диктатуре и жестокости: повстанцев немного, но они сильны духом, сильны надеждой.</string>
    <string name="details">Детали</string>
    <string name="share">Поделиться</string>
    <string name="description">Описание</string>
    <string name="comment">Комментарий</string>
    <string name="hint_message">Введите текст</string>
    <string name="invitation">Мне нравится фильм \"%1$s\". Приглашаю посмотреть его вместе!</string>
    <string name="exit_dialog_text">Пожалуйста, подтвердите выход из приложения.</string>
    <string name="exit_dialog_title">Уже уходите?</string>
    <string name="exit_positive">Да, выйти</string>
    <string name="exit_negative">Отмена</string>
    <string name="settings">Настройки</string>
    <string name="favorite">Избранное</string>
    <string name="home">Главная</string>
    <string name="nav_header_title" translatable="false">MovieHound</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="switch_theme">Сменить тему</string>
    <string name="search">Поиск</string>
    <string name="cancel">Отмена</string>
    <string name="favorite_remove">Фильм удален из \"Избранного\". %1$s сек.</string>
    <string name="trailer">Трейлер</string>
    <string name="poster">Постер</string>
    <string name="country_and_runtime">%1$s, %2$d мин.</string>
    <string name="about_movie">Информация о фильме</string>
    <string name="server_error">Ошибка сервера!</string>
    <string name="vote_count">%1$d оценок</string>
    <string name="internet_fail">Отсутствует интернет!</string>
    <string name="retry">Повторить</string>
    <string name="title_and_release_date" translatable="false">%1$s (%2$s)</string>
    <string name="country_budget_runtime">%1$s, %2$d млн., %3$d мин.</string>
</resources>
