<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_24">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_8"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/exit_dialog_title"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_24"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/exit_dialog_text"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/exit_positive_btn"
        style="@style/Widget.MovieHound.Button.Exit"
        android:layout_marginBottom="@dimen/space_8"
        android:text="@string/exit_positive" />

    <Button
        android:id="@+id/exit_negative_btn"
        style="@style/Widget.MovieHound.Button.Exit.Outline"
        android:text="@string/exit_negative" />

</LinearLayout>