<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu_fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_local_movies_gray"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_border_gray"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_gray"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/menu_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_change_theme"
            android:title="@string/change_theme"
            android:icon="@drawable/ic_image_gray"/>
    </group>

</menu>