<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailFragment"
    tools:showIn="@layout/fragment_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_sm">

        <TextView
            android:id="@+id/title_tv"
            style="@style/Widget.MovieHound.TextView.Title"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="@string/sw_4_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sm"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favorite_iv"
                style="@style/Widget.MovieHound.Icon"
                android:src="@drawable/ic_favorite_check"
                android:tint="?android:attr/colorPrimary"
                android:layout_marginEnd="@dimen/margin_md"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/invite_iv"
                style="@style/Widget.MovieHound.Icon"
                android:src="@drawable/ic_share_white"
                android:tint="?android:attr/colorPrimary"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_xs"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/description"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/content_text_size" />

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/content_text_size"
            tools:text="@string/sw_4_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            app:hintTextAppearance="@style/TextAppearance.MovieHound.HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/comment"
                android:textColor="?android:attr/textColorSecondary"
                android:theme="@style/Widget.MovieHound.EditText" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>