<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieFragment"
    tools:showIn="@layout/fragment_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_xs"
        android:paddingBottom="@dimen/padding_xs">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_sm"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/poster_iv"
                    style="@style/Widget.MovieHound.ImageView"
                    android:layout_height="@dimen/cover_detail_height"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_sw_4" />

                <LinearLayout
                    style="@style/Widget.MovieHound.LinearLayout.Blackout"
                    android:layout_gravity="top|end">

                    <ImageView
                        android:id="@+id/favorite_iv"
                        style="@style/Widget.MovieHound.Icon"
                        android:src="@drawable/ic_favorite_check"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <LinearLayout
                    style="@style/Widget.MovieHound.LinearLayout.Blackout"
                    android:layout_gravity="bottom|start">

                    <ImageView
                        android:id="@+id/invite_iv"
                        style="@style/Widget.MovieHound.Icon"
                        android:src="@drawable/ic_share_white"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sm"
            android:layout_marginTop="@dimen/margin_md"
            android:layout_marginEnd="@dimen/margin_sm"
            android:layout_marginBottom="@dimen/margin_xs"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_tv"
                style="@style/Widget.MovieHound.TextView.Title"
                android:textColor="?android:attr/textColorPrimary"
                tools:text="@string/sw_4_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:layout_marginBottom="@dimen/margin_xs"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/description"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/content_text_size" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/content_text_size"
                tools:text="@string/sw_4_desc" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                app:hintTextAppearance="@style/TextAppearance.MovieHound.HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/comment"
                    android:textColor="?android:attr/textColorSecondary"
                    android:theme="@style/Widget.MovieHound.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>